Clear both on filtering dashboard, to avoid overlap with floating elements
* Clear both on filtering dashboard

Prevents overlap with floating elements on a page (like thumbnail images)

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
     border-radius: 5px;
     font-size: 0.8em;
     text-align: center;
+    clear: both;
 }
 
 /* Dashboard header */
